$size[20]{$u{CHANGE LOG:}}

$size[14]{$u{Update for 23.09.14 (Latikai):}}
  * Bile regen colours reverted to what they were before.
  * Included changelog for yesterday.
 
$size[14]{$u{Update for 23.09.14 (Latikai):}}
  * Crafting menu will no longer go to root after selecting a recipe (credit to Feone).
  * Aether multiplier now also available if you have the respective options ticked.
 
$size[14]{$u{Update for 20.09.14 (Latikai):}}
  * Merged in the latest patch changes. Small tweaks to come when I have time to read the patch notes in detail.
  * Added in the options to remove the biles and minimap from rendering at all (for some vid'ers out there).
  * The client currently shows just aether as a purity percentage.
 
$size[14]{$u{Update for 10.08.14 (Latikai):}}
  * Various updates to the crafting menu: once again correctly reads from the wiki, and will now also show debuffs on food items (undebuffs cannot be shown as these are dependent on the ingredients used).
 
$size[14]{$u{Update for 29.07.14 (Latikai):}}
  * Lowered the buff icons a bit for better visibility.
 
$size[14]{$u{Update for 08.07.14 (Latikai):}}
  * Included an abacus window (open with ctrl+A). It lists the scalp score and artifice overview of the current character. The scalp score will only update by closing and reopening the window, but artifice information will be recalculated when you (un)equip an item.
  * Got rid of some crashes by trying to open tool windows before entering the world.
  * Got rid of an annoying bug where some tool windows did not close correctly on log-out, preventing them from being opened on other characters.
 
$size[14]{$u{Update for 30.06.14 (Latikai):}}
  * Migrated to github for file hosting, updater issues should be solved now.
 
$size[14]{$u{Update for 27.06.14 (Latikai):}}
  * Merged in nikelin's fix for invisible homestead pointers.
 
$size[14]{$u{Update for 10.05.14 (Latikai):}}
  * Finally got round to the long-due merge of loftar's and Ender's changes.
 