@@ -270,7 +270,7 @@ public class WItem extends Widget implements DTarget {
 		if(alch == null){return(null);}
 	    }
 	    String num = String.format("%d%%",(int)(100*alch.purity()));
-	    return(new TexI(Utils.outline2(Text.render(num, Alchemy.colors[0]).img, Color.DARK_GRAY)));
+	    return(new TexI(Utils.outline2(Text.render(num, alch.color()).img, Color.DARK_GRAY)));
 	}
     };
     
@@ -283,7 +283,7 @@ public class WItem extends Widget implements DTarget {
 		alch = ItemInfo.find(Alchemy.class, cont.sub);
 		if(alch == null){return(null);}
 	    }
-	    String num = String.format("%.2f",alch.mult());
+	    String num = String.format("%.2f%%",alch.purity());
 	    return(new TexI(Utils.outline2(Text.render(num, alch.color()).img, Color.DARK_GRAY)));
 	}
     };
